# capdisc

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
commands/: capabilities-report.md
src/capabilities_discovery/: __init__.py  base.py  discovery.py  frontmatter.py  html.py  mcp_catalog.py  plugin_catalog.py  settings.py  tokens.py
src/capabilities_discovery/catalog/: __init__.py  entries.py  types.py
src/capabilities_discovery/hooks/: __init__.py  schema.py  types.py
src/capabilities_discovery/mcp_harvest/: __init__.py  auth.py  cache.py  config.py  connect.py  types.py
src/capabilities_discovery/report/: __init__.py  assets.py  cards.py  cli.py  components.py  harvest.py  html.py  models.py  page.py  sections.py  types.py
src/capabilities_discovery/scope/: __init__.py  locations.py  types.py
src/capabilities_discovery/scope/inventory/: __init__.py  assets.py  capture.py  render.py  roots.py
tests/: test_base.py  test_frontmatter.py  test_hooks.py  test_html.py  test_inventory.py  test_mcp_catalog.py  test_mcp_harvest.py  test_plugin_catalog.py  test_plugin_scan.py  test_report.py  test_scope.py  test_settings.py
