[project]
name = "capabilities-discovery"
version = "0.1.0"
description = "Discovers Claude Code capabilities — skills, agents, plugins, MCP servers, hooks — into typed catalogs and an environment report."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "py-key-value-aio[filetree]>=0.4.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
]

[project.scripts]
capabilities-discovery = "capabilities_discovery.report:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capabilities_discovery"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "SIM", "PTH",
    "RET", "TRY", "S", "ARG", "PL", "RUF",
]
ignore = ["TRY003", "PLR0913", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S102", "PLR2004", "ARG", "PLC0415"]
"__init__.py" = ["F401"]
# These models bind external camelCase JSON config keys (mcpServers, pluginConfigs) by field name.
"src/capabilities_discovery/mcp_harvest/config.py" = ["N815"]
"src/capabilities_discovery/plugin_catalog.py" = ["N815"]

[tool.ruff.lint.isort]
known-first-party = ["capabilities_discovery"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -ra"

[tool.coverage.run]
source = ["src"]
branch = true
